--- a/style.css
+++ b/style.css
@@ -3,19 +3,24 @@
 * { box-sizing: border-box; }
 
 :root {
-  --primary-color: #302AE6;
-  --secondary-color: #536390;
-  --font-color: #424242;
-  --bg-color: #fff;
+  --primary-color: rgb(255, 92, 92);
+  --primary-variant: #FF2D2D;
+  --secondary-color: #1B9999;
+  --on-background: rgba(66, 66, 66, 1);
+  --on-background-alt: rgba(66, 66, 66, .7);
+  --background: rgb(255, 255, 255);
   --heading-color: #292922;
+  --box-shadow: 0 5px 20px 1px rgba(0, 0, 0, .5);
 }
 
 [data-theme="dark"] {
-  --primary-color: #9A97F3;
-  --secondary-color: #818cab;
-  --font-color: #e1e1ff;
-  --bg-color: #161625;
-  --heading-color: #818cab;
+  --primary-color: rgb(150, 65, 255);
+  --primary-variant: #6c63ff;
+  --secondary-color: #03DAC5;
+  --on-primary: #000;
+  --on-background: rgba(255,255,255,.9);
+  --on-background-alt: rgba(255,255,255,.7);
+  --background: #121212;
 }
 
 /* Scroll smoothly between sections */
@@ -23,23 +28,29 @@ html { scroll-behavior: smooth; }
 
 body {
   margin: 0;
-  background-color: var(--bg-color);
-  color: var(--font-color);
+  color: var(--on-background);
   font-family: Comfortaa, sans-serif;
+  background-color: var(--background);
+  background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%233ca5bb' fill-opacity='0.29' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 .theme-switch-wrapper {
+    z-index: 100;
     position: fixed;
     right: 25px;
     top: 30px;
 }
 
 nav {
+    z-index: 10;
     position: fixed;
     font-family: Oswald, sans-serif;
     font-size: 24px;
+    letter-spacing: 3px;
     text-transform: uppercase;
     padding: 25px;
+    width: 100vw;
+    background-color: rgba(255,255,255,.5);
 }
 
 a {
@@ -54,6 +65,18 @@ a:hover, a:focus {
     border-bottom: 3px solid currentColor;
 }
 
+.toggle-text {
+    position: relative;
+    top: -4px;
+    right: 5px;
+    color: var(--on-background);
+}
+
+.fas, .far {
+    font-size: 30px;
+    margin-right: 5px;
+}
+
 section {
     min-height: 100vh;
     display: flex;
@@ -61,51 +84,69 @@ section {
     align-items: center;
 }
 
+.title-group {
+    text-align: center;
+}
+
 h1 {
     font-family: Kaushan Script, sans-serif;
     font-size: 100px;
+    margin-bottom: 0;
+}
+
+h2 {
+    font-size: 2rem;
+    font-weight: normal;
+    color: var(--on-background-alt);
 }
 
 .fab { 
     font-size: 100px; 
-    margin-right: 25px; 
+    margin-right: 50px; 
     cursor: pointer;
-    color: var(--font-color);
+    color: var(--primary-color);
 }
 
 .fab:hover { 
-    filter: brightness(120%);
+    color: var(--on-background);
+}
+
+.image-container {
+    display: flex;
+}
+
+img {
+    height: 300px;
+    width: 300px;
+}
+
+#image1, #image2, #image3 {
+    border: 1px solid var(--on-background-alt);
+    border-radius: 10px;
+    padding-left: 25px;
+    margin-right: 25px;
+    width: 350px;
+    background-color: var(--background);
+    box-shadow: var(--box-shadow);
 }
 
 
 
-/* h1 {
-  color: var(--heading-color);
-  font-family: "Sansita One", serif;
-  font-size: 2rem;
-  margin-bottom: 1vh;
-/* } */
 
-/* p {
-  font-size: 1.1rem;
-  line-height: 1.6rem;
+@media screen and (min-width: 1800px) {
+    img { height: 400px; width: 400px; }
+    #image1, #image2, #image3 { width: 450px; }
 }
 
-.post-meta {
-  font-size: 1rem;
-  font-style: italic;
-  display: block;
-  margin-bottom: 4vh;
-  color: var(--secondary-color);
-} */
 
-/*slider switch css */
+/* Slider */
 .theme-switch-wrapper {
   display: flex;
   flex-direction: row-reverse;
   align-items: center;
 }
-.theme-switch-wrapper em {
+
+.theme-switch-wrapper span {
   margin-right: 10px;
   font-size: 1rem;
 }
@@ -144,7 +185,7 @@ h1 {
 }
 
 input:checked + .slider {
-  background-color: #66bb6a;
+  background-color: var(--primary-color);
 }
 
 input:checked + .slider:before {
