--- a/style.css
+++ b/style.css
@@ -1,29 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa|Kaushan+Script|Oswald&display=swap');
 
-* { box-sizing: border-box; }
-
 :root {
   --primary-color: rgb(255, 92, 92);
-  --primary-variant: #FF2D2D;
-  --secondary-color: #1B9999;
+  --primary-variant: #ff2d2d;
+  --secondary-color: #1b9999;
   --on-primary: rgb(250, 250, 250);
   --on-background: rgba(66, 66, 66, 1);
-  --on-background-alt: rgba(66, 66, 66, .7);
+  --on-background-alt: rgba(66, 66, 66, 0.7);
   --background: rgb(255, 255, 255);
-  --box-shadow: 0 5px 20px 1px rgba(0, 0, 0, .5);
+  --box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
 }
 
 [data-theme="dark"] {
   --primary-color: rgb(150, 65, 255);
   --primary-variant: #6c63ff;
-  --secondary-color: #03DAC5;
+  --secondary-color: #03dac5;
   --on-primary: #000;
-  --on-background: rgba(255,255,255,.9);
-  --on-background-alt: rgba(255,255,255,.7);
+  --on-background: rgba(255, 255, 255, 0.9);
+  --on-background-alt: rgba(255, 255, 255, 0.7);
   --background: #121212;
 }
 
-html { scroll-behavior: smooth; }
+html {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 
 body {
   margin: 0;
@@ -38,10 +39,6 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-#about, #projects, #contact {
-  display: flex;
   flex-direction: column;
 }
 
@@ -67,7 +64,7 @@ nav {
   text-transform: uppercase;
   padding: 25px;
   width: 100vw;
-  background-color: rgba(255,255,255,.5);
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 a {
@@ -78,7 +75,8 @@ a {
   font-weight: bold;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
   color: var(--on-background);
   border-bottom: 3px solid currentColor;
 }
@@ -125,17 +123,17 @@ a:hover, a:focus {
   position: absolute;
   right: 0;
   top: 0;
-  transition: .4s;
+  transition: 0.4s;
 }
 
-.slider:before {
+.slider::before {
   background-color: #fff;
   bottom: 4px;
   content: "";
   height: 26px;
   left: 4px;
   position: absolute;
-  transition: .4s;
+  transition: 0.4s;
   width: 26px;
 }
 
@@ -143,7 +141,7 @@ input:checked + .slider {
   background-color: var(--primary-color);
 }
 
-input:checked + .slider:before {
+input:checked + .slider::before {
   transform: translateX(26px);
 }
 
@@ -151,7 +149,7 @@ input:checked + .slider:before {
   border-radius: 34px;
 }
 
-.slider.round:before {
+.slider.round::before {
   border-radius: 50%;
 }
 
@@ -166,23 +164,23 @@ input:checked + .slider:before {
 }
 
 /* About Section */
-.image-container {
+.about-container {
   display: flex;
+}
+
+.image-container {
+  border: 1px solid var(--secondary-color);
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin-right: 25px;
+  width: auto;
+  background-color: var(--background);
+  box-shadow: var(--box-shadow);
 }
 
 img {
   height: 300px;
   width: 300px;
-}
-
-#image1, #image2, #image3 {
-  border: 1px solid var(--secondary-color);
-  border-radius: 10px;
-  padding-left: 25px;
-  margin-right: 25px;
-  width: 350px;
-  background-color: var(--background);
-  box-shadow: var(--box-shadow);
 }
 
 /* Projects Section */
@@ -203,7 +201,11 @@ button {
 }
 
 button:disabled {
-  opacity: .4;
+  opacity: 0.4;
+}
+
+button:hover:not(.outline) {
+  filter: brightness(110%);
 }
 
 .primary {
@@ -212,13 +214,13 @@ button:disabled {
 }
 
 .secondary {
-  background-color: var(--secondary-color);
   border: 2px solid var(--secondary-color);
-  color: var(--on-primary);
 }
 
-button:hover:not(.outline) {
-  filter: brightness(110%);
+.secondary,
+.secondary:hover {
+  background-color: var(--secondary-color);
+  color: var(--on-primary);
 }
 
 .outline {
@@ -231,17 +233,12 @@ button:hover:not(.outline) {
   color: var(--on-primary);
 }
 
-.secondary:hover {
-  background-color: var(--secondary-color);
-  color: var(--on-primary);
-}
-
-#columns {
+.columns {
   columns: 3;
   column-gap: 30px;
   width: 90%;
   text-align: justify;
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, 0.5);
   color: var(--on-primary);
   border-radius: 10px;
   padding: 30px;
@@ -249,23 +246,25 @@ button:hover:not(.outline) {
 
 p {
   margin: 0;
-  line-height: 1.5rem;
+  line-height: 25px;
 }
 
 /* Contact Section */
-.fab { 
-  font-size: 100px; 
-  margin-right: 50px; 
+.fab {
+  font-size: 100px;
+  margin-right: 50px;
   cursor: pointer;
   color: var(--primary-color);
 }
 
-.fab:hover { 
+.fab:hover {
   color: var(--on-background);
 }
 
-/* Media Query: Large Smartphone (Vertical) */
+/* Media Query: 1080P Monitor and Larger */
 @media screen and (min-width: 1800px) {
-  img { height: 400px; width: 400px; }
-  #image1, #image2, #image3 { width: 450px; }
+  img {
+    height: 400px;
+    width: 400px;
+  }
 }
