--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav {
   text-transform: uppercase;
   padding: 25px;
   width: 100vw;
-  background-color: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.5);
 }
 
 a {
@@ -116,7 +116,7 @@ a:focus {
 }
 
 .slider {
-  background-color: #ccc;
+  background: #ccc;
   bottom: 0;
   cursor: pointer;
   left: 0;
@@ -127,7 +127,7 @@ a:focus {
 }
 
 .slider::before {
-  background-color: #fff;
+  background: #fff;
   bottom: 4px;
   content: "";
   height: 26px;
@@ -138,7 +138,7 @@ a:focus {
 }
 
 input:checked + .slider {
-  background-color: var(--primary-color);
+  background: var(--primary-color);
 }
 
 input:checked + .slider::before {
@@ -174,7 +174,7 @@ input:checked + .slider::before {
   padding: 10px 20px;
   margin-right: 25px;
   width: auto;
-  background-color: var(--background);
+  background: var(--background);
   box-shadow: var(--box-shadow);
 }
 
@@ -209,7 +209,7 @@ button:hover:not(.outline) {
 }
 
 .primary {
-  background-color: var(--primary-color);
+  background: var(--primary-color);
   color: var(--on-primary);
 }
 
@@ -219,17 +219,17 @@ button:hover:not(.outline) {
 
 .secondary,
 .secondary:hover {
-  background-color: var(--secondary-color);
+  background: var(--secondary-color);
   color: var(--on-primary);
 }
 
 .outline {
-  background-color: var(--background);
+  background: var(--background);
   color: var(--on-background);
 }
 
 .outline:hover {
-  background-color: var(--primary-color);
+  background: var(--primary-color);
   color: var(--on-primary);
 }
 
@@ -238,7 +238,7 @@ button:hover:not(.outline) {
   column-gap: 30px;
   width: 90%;
   text-align: justify;
-  background-color: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.5);
   color: var(--on-primary);
   border-radius: 10px;
   padding: 30px;
