--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
   --primary-variant: #ff2d2d;
   --secondary-color: #1b9999;
   --on-primary: rgb(250, 250, 250);
-  --on-background: rgba(66, 66, 66, 1);
+  --on-background: rgb(66, 66, 66);
   --on-background-alt: rgba(66, 66, 66, 0.7);
   --background: rgb(255, 255, 255);
   --box-shadow: 0 5px 20px 1px rgba(0, 0, 0, 0.5);
@@ -78,7 +78,7 @@ a {
 a:hover,
 a:focus {
   color: var(--on-background);
-  border-bottom: 3px solid currentColor;
+  border-bottom: 3px solid;
 }
 
 /* Dark Mode Toggle */
@@ -202,6 +202,7 @@ button {
 
 button:disabled {
   opacity: 0.4;
+  cursor: default;
 }
 
 button:hover:not(.outline) {
@@ -218,7 +219,8 @@ button:hover:not(.outline) {
 }
 
 .secondary,
-.secondary:hover {
+.secondary:hover,
+.outline.secondary:hover {
   background: var(--secondary-color);
   color: var(--on-primary);
 }
@@ -238,7 +240,7 @@ button:hover:not(.outline) {
   column-gap: 30px;
   width: 90%;
   text-align: justify;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgb(0 0 0 / 50%);
   color: var(--on-primary);
   border-radius: 10px;
   padding: 30px;
@@ -259,12 +261,4 @@ p {
 
 .fab:hover {
   color: var(--on-background);
-}
-
-/* Media Query: 1080P Monitor and Larger */
-@media screen and (min-width: 1800px) {
-  img {
-    height: 400px;
-    width: 400px;
-  }
 }
